[package]
name = "cryptographic_sync-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
p3-baby-bear = "0.1.3-succinct"
bincode = "1.3.3"
